# rsp_ws

./: README.md
aruco_hand_eye/launch/: realsense_calibration.launch
aruco_ros/aruco_ros/: CMakeLists.txt
aruco_ros/aruco_ros/src/: simple_quad.cpp
central_launch/: CMakeLists.txt  package.xml
central_launch/action/: central.action
central_launch/launch/: aruco_realsense.launch  aruco_test.launch  central.launch  robot.launch  robot_action.launch  robot_action_execute.launch  robot_bringup.launch  sim.launch  test.launch  ur5_kinematics_planning.launch
central_launch/rviz/: robot.rviz  robot_octo.rviz
central_launch/src/: central.cpp  central_action.cpp  central_sim.cpp
kinect_teleop/: CMakeLists.txt  package.xml
kinect_teleop/include/kinect_teleop/: kinect_teleop.h
kinect_teleop/launch/: test.launch
kinect_teleop/src/: kinect_teleop.cpp
octomap_mapping/: .gitignore
realsense_mapping/: CMakeLists.txt  package.xml
realsense_mapping/config/: sensors_realsense.yaml
realsense_mapping/launch/: realsense_mapping.launch
universal_robot/ur5_moveit_config/config/: joint_limits.yaml  kinematics.yaml
universal_robot/ur5_moveit_config/launch/: move_group.launch  moveit_rviz.launch  sensor_manager.launch.xml
ur5_kinematics_planning/: CMakeLists.txt  package.xml
ur5_kinematics_planning/src/: ur5_kinematics.cpp  ur5_planning.cpp  ur5_planning_action.cpp
ur_modern_driver/config/: ur5_controllers.yaml
