<?xml version="1.0"?>
<package format="2">
  <name>kinect_teleop</name>
  <version>0.0.0</version>
  <description>The kinect_teleop package</description>
  <maintainer email="ykang26@jhu.edu">Yucheng Kang</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>

  <export></export>
</package>
